--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ws-log",
-  "version": "0.0.1",
+  "name": "@willptswan/ws-log",
+  "version": "0.0.5",
   "description": "Make logs more fun.",
   "license": "MIT",
   "author": "Will Swan",
@@ -13,7 +13,8 @@
   },
   "files": ["dist"],
   "scripts": {
-    "build": "npx tsc && cp dist/index.js dist/index.mjs && cp src/global.d.ts dist/"
+    "build": "npx tsc && cp dist/index.js dist/index.mjs && cp src/global.d.ts dist/",
+    "publish": "npm run build && npm publish --access public"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
